--- a/app/src/styles/app.scss
+++ b/app/src/styles/app.scss
@@ -4,9 +4,15 @@ html{
     font-size:100px;
 }
 
+*{
+	margin:0;
+	padding:0;
+}
+
 body{
 	background:$bg;
 	color:$text;
+	font-size:0.16rem;
 }
 
 .title{
@@ -64,4 +70,54 @@ body{
 			padding:0.05rem 0.03rem;
 		}
 	}
+}
+
+.main{
+	width:100%;
+	height:100%;
+	font-size:16px;
+	.top{
+		width:100%;
+		height:120px;
+		background:#ffc;
+		border-bottom:2px solid #ccc;
+	}
+	.content{
+		width:100%;
+		height:500px;
+		.right{
+			width:100%;
+			height:500px;
+			background:#eee;
+			float:left;
+			.container{
+				padding-left:300px;
+				img{
+					width:200px;
+					height:200px;
+				}
+			}
+		}
+		.left{
+			width:300px;
+			height:500px;
+			background:#abcdef;
+			float:left;
+			margin-left:-100%;
+			nav{
+				padding:30px 10px 0 30px;
+				a{
+					display:block;
+					height:30px;
+					line-height:30px;
+					text-decoration:none;
+					color:#333;
+				}
+			}
+		}
+	}
+}
+
+.search-page{
+	padding:20px;
 }
